--- a/flags.html
+++ b/flags.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset=utf-8 />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Firebase Authentication Example</title>
+  <title>Suurpeli Objectives</title>
   <link rel="stylesheet" href="css/main.css">
 
     <!--include firebase-->
@@ -107,7 +107,7 @@
   <body>
     <nav>
         <button class="navButton" onclick="navIndex()">Index</button>
-        <button class="navButton" onclick="navLiput()">Liput</button>
+        <button class="navButton" onclick="navLiput()">Objectives</button>
         <button class="navButton" onclick="navNews()">News</button>
     </nav>
     <main>
