--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ limitations under the License.
 <head>
   <meta charset=utf-8 />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Firebase Authentication Example</title>
+  <title>Suurpeli</title>
   <link rel="stylesheet" href="./css/main.css">
 
   <!--include firebase-->
@@ -101,7 +101,7 @@ limitations under the License.
 <body>
   <nav>
     <button class="navButton" onclick="navIndex()">Index</button>
-    <button class="navButton" onclick="navLiput()">Liput</button>
+    <button class="navButton" onclick="navLiput()">Objectives</button>
     <button class="navButton" onclick="navNews()">News</button>
   </nav>
   <main>
