--- a/index.html
+++ b/index.html
@@ -54,9 +54,11 @@ limitations under the License.
         document.getElementById("password").value = "";
       }).catch(function(error){
         //failed login
+        console.log(error);
         alert("login failed");
       });
     }
+
 
     function logout(){
       if(firebase.auth().currentUser){
