--- a/flags.html
+++ b/flags.html
@@ -111,7 +111,7 @@
   <body>
     <nav>
         <button class="navButton" onclick="navIndex()">Index</button>
-        <button class="navButton" onclick="navLiput()">Liput</button>
+        <button class="navButton" onclick="navLiput()">Objectives</button>
         <button class="navButton" onclick="navNews()">News</button>
     </nav>
     <main>
