--- a/news.html
+++ b/news.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset=utf-8 />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Suurpeli News</title>
+  <title>Uutiset</title>
   <link rel="stylesheet" href="css/main.css">
 
     <!--include firebase-->
@@ -66,12 +66,12 @@
   <body>
     <nav>
         <button class="navButton" onclick="navIndex()">Index</button>
-        <button class="navButton" onclick="navLiput()">Objectives</button>
-        <button class="navButton" onclick="navNews()">News</button>
+        <button class="navButton" onclick="navLiput()">Liput</button>
+        <button class="navButton" onclick="navNews()">Uutiset</button>
     </nav>
     <main>
-      <button onclick="logout()">Logout</button>
-      <h1>News</h1>
+      <button onclick="logout()">Kirjaudu ulos</button>
+      <h1>Uutiset</h1>
       <div id="toolsContainer">
 
       </div>
