fixed flag deactivation and coloring

--- a/flags.html
+++ b/flags.html
@@ -161,6 +161,7 @@
       <button onclick="clearFlags()">Poista kaikki</button>
       <button onclick="activateNextFlag()">Aktivoi seuraava</button>
       <button onclick="deactivateLastFlag()">Deaktivoi viimeinen</button>
+      <button onclick="testMarker()">do it</button>
       <button id = "update" onclick="UpdateFlags()">Päivitä liput</button>
       <div id="map"></div>
       <button value="Toggle visibility" onclick="overlay.toggle();">Toggle overlay</button>
