--- a/flags.html
+++ b/flags.html
@@ -27,7 +27,7 @@
 
     <!--include firebase using scripts after the initialization-->
     <script
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDKT-fu4FeCH4iehwP2tJP6CpZfGokWXFc&callback=initMap"></script>
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDKT-fu4FeCH4iehwP2tJP6CpZfGokWXFc"></script>
     </script>
     <script src="./scripts/lippu-data.js"></script>
     <script src="./scripts/mapoverlay.js"></script>
