redirect on login, remove extra buttons from flags

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@ limitations under the License.
         document.getElementById("loginText").innerHTML = "Kirjautuminen onnistui!";
         document.getElementById("email").value = "";
         document.getElementById("password").value = "";
+        window.location.href="flags.html";
       }).catch(function(error){
         //failed login
         console.log(error);
